--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Proyecto Colaborativo - Portafolios del Equipo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"> <!-- Enlace a tu archivo de estilos -->
+</head>
+
+<body>
+    <!-- Header con título y descripción general del proyecto -->
+    <header>
+        <div class="container">
+            <h1>Proyecto Colaborativo - Portafolios del Equipo</h1>
+            <p>Bienvenidos a nuestra plataforma donde compartimos nuestras habilidades, proyectos y logros. Explora los portafolios de cada miembro del equipo.</p>
+        </div>
+    </header>
+
+    <!-- Sección de miembros -->
+    <section class="team">
+        <div class="container">
+            <h2>Miembros del Equipo</h2>
+            <div class="team-members">
+                <!-- Miembro 1 -->
+                <div class="team-member">
+                    <img src="https://via.placeholder.com/150" alt="Foto de Edwin" class="team-member-img">
+                    <h3>Edwin Cristhian Quispe Diaz</h3>
+                    <p>Desarrollador Backend</p>
+                    <a href="https://github.com/usuario1" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                </div>
+                <!-- Miembro 2 -->
+                <div class="team-member">
+                    <img src="https://via.placeholder.com/150" alt="Foto de Yuri" class="team-member-img">
+                    <h3>Yuri Raul Molleapaza Flores</h3>
+                    <p>Desarrollador Frontend</p>
+                    <a href="https://github.com/usuario2" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                </div>
+                <!-- Miembro 3 -->
+                <div class="team-member">
+                    <img src="https://via.placeholder.com/150" alt="Foto de Antony" class="team-member-img">
+                    <h3>Antony Uriel Gomez Machaca</h3>
+                    <p>Desarrollador Full Stack</p>
+                    <a href="https://github.com/Gen0z63" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                </div>
+                <!-- Miembro 4 -->
+                <div class="team-member">
+                    <img src="https://via.placeholder.com/150" alt="Foto de Victor" class="team-member-img">
+                    <h3>Victor Giovanny Angeles Ocrospoma</h3>
+                    <p>Diseñador UI/UX</p>
+                    <a href="https://github.com/usuario3" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                </div>
+                <!-- Miembro 5 -->
+                <div class="team-member">
+                    <img src="https://via.placeholder.com/150" alt="Foto de Carlos" class="team-member-img">
+                    <h3>Carlos Danie Retamozo Jihuallanca</h3>
+                    <p>Especialista en Bases de Datos</p>
+                    <a href="https://github.com/usuario4" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer con información de contacto o derechos de autor -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Proyecto Colaborativo - Todos los derechos reservados</p>
+        </div>
+    </footer>
+</body>
+
+</html>
 
