--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
                 <div class="team-member">
                     <h3>Edwin Cristhian Quispe Diaz</h3>
                     <p>Desarrollador Backend</p>
-                    <a href="https://github.com/usuario1" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                    <a href="https://github.com/Cristhiandq" target="_blank" class="portfolio-link">Ver Portafolio</a>
                 </div>
                 <!-- Miembro 2 -->
                 <div class="team-member">
                     <h3>Yuri Raul Molleapaza Flores</h3>
                     <p>Desarrollador Frontend</p>
-                    <a href="https://github.com/usuario2" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                    <a href="https://github.com/YuriMolleapaza" target="_blank" class="portfolio-link">Ver Portafolio</a>
                 </div>
                 <!-- Miembro 3 -->
                 <div class="team-member">
                     <h3>Antony Uriel Gomez Machaca</h3>
                     <p>Desarrollador Full Stack</p>
-                    <a href="https://github.com/Gen0z63" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                    <a href="https://github.com/AntonyGZ" target="_blank" class="portfolio-link">Ver Portafolio</a>
                 </div>
                 <!-- Miembro 4 -->
                 <div class="team-member">
                     <h3>Victor Giovanny Angeles Ocrospoma</h3>
                     <p>Diseñador UI/UX</p>
-                    <a href="https://github.com/usuario3" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                    <a href="https://AngelesNet.github.io" target="_blank" class="portfolio-link">Ver Portafolio</a>
                 </div>
                 <!-- Miembro 5 -->
                 <div class="team-member">
                     <h3>Carlos Danie Retamozo Jihuallanca</h3>
                     <p>Especialista en Bases de Datos</p>
-                    <a href="https://github.com/usuario4" target="_blank" class="portfolio-link">Ver Portafolio</a>
+                    <a href="https://carlos.github.io" target="_blank" class="portfolio-link">Ver Portafolio</a>
                 </div>
             </div>
         </div>
